Remove hacky fix in favour of slight refactor, fixing the issue properly